[tool.poetry]
name = "driving-license-kata"
version = "0.1.0"
description = ""
authors = ["Marie <66479073+ndowkunda@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "driving_license_kata"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
